<resources>
    <string name="app_name">SmartPantryManager</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="quantity_and_unit">Quantity and Unit</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="save_ingredient">Save Ingredient</string>
    <string name="ingredient_name_hint">Ingredient Name</string>
    <string name="quantity_hint">Quantity</string>
    <string name="unit_hint">Unit</string>
    <string name="expiry_date_hint">Expiry Date</string>
    <string name="suggested_recipes">Suggested Recipes</string>
    <string name="no_recipes_match">No recipes match your pantry ingredients.</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipe_ingredients_placeholder">Recipe ingredients will appear here</string>
    <string name="preparation">Preparation</string>
    <string name="preparation_steps_placeholder">Preparation steps will appear here</string>
    <string name="settings_profile">Settings / Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="save_profile">Save Profile</string>
    <string name="back">Back</string>
    <string name="profile_saved_successfully">Profile saved successfully</string>
    <string name="nav_pantry">Pantry</string>
    <string name="nav_recipes">Recipes</string>
    <string name="nav_settings">Settings</string>
    <string name="recipe">Recipe</string>
    <string name="view_recipe">View Recipe</string>
</resources>